--- a/style.css
+++ b/style.css
@@ -1,25 +1,82 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-body{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 50px 1fr 300px;
-    grid-template-areas: 
+:root {
+  --one-color: #00b289;
+  --two-color: #f8db62;
+  --black-color: #4c4d5f;
+  --white-color: #ffffff;
+}
+
+body {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 40px 1fr 300px;
+  grid-template-areas:
     "header"
     "main"
     "footer";
 }
 
-header{
-    grid-area: header;
-    background-color: red;
+/* HEADER */
+header {
+  grid-area: header;
+
+  display: grid;
+  grid-template-columns: 130px 1fr 200px;
+  grid-template-rows: 1fr;
+  grid-template-areas: "logo links buttons";
 }
 
-main{
-    grid-area: main;
-    background-color: blue
+#logo-navbar {
+  grid-area: logo;
 }
 
-footer{
-    grid-area: footer;
-    background-color: green
+.layout-navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+#links-navbar {
+  grid-area: links;
+}
+#links-navbar > a {
+  font-family: "Roboto", sans-serif;
+  color: var(--black-color);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+#buttons-navbar {
+  grid-area: buttons;
+}
+
+#buttons-navbar > button {
+  padding: 10px;
+  border-radius: 2px;
+
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+}
+#login-button-navbar {
+  background-color: transparent;
+  border: 2px solid var(--one-color);
+  color: var(--one-color);
+}
+
+#startfree-button-navbar {
+  background-color: var(--one-color);
+  border: none;
+  color: var(--white-color);
+}
+
+/* MAIN */
+main {
+  grid-area: main;
+}
+
+footer {
+  grid-area: footer;
 }
