--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   --two-color: #f8db62;
   --black-color: #4c4d5f;
   --white-color: #ffffff;
+
+  --font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -22,13 +24,17 @@ header {
   grid-area: header;
 
   display: grid;
-  grid-template-columns: 130px 1fr 200px;
+  grid-template-columns: 300px 1fr 300px;
   grid-template-rows: 1fr;
   grid-template-areas: "logo links buttons";
 }
 
 #logo-navbar {
   grid-area: logo;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
 }
 
 .layout-navbar {
@@ -43,7 +49,7 @@ header {
   grid-area: links;
 }
 #links-navbar > a {
-  font-family: "Roboto", sans-serif;
+  font-family: var(--font-family);
   color: var(--black-color);
   text-decoration: none;
   font-weight: bold;
@@ -51,13 +57,17 @@ header {
 
 #buttons-navbar {
   grid-area: buttons;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
 }
 
 #buttons-navbar > button {
   padding: 10px;
   border-radius: 2px;
 
-  font-family: 'Roboto', sans-serif;
+  font-family: var(--font-family);
   font-weight: bold;
 }
 #login-button-navbar {
@@ -72,10 +82,87 @@ header {
   color: var(--white-color);
 }
 
-/* MAIN */
+/* ----- MAIN  ----- */
 main {
   grid-area: main;
+  padding-left: 150px;
+  padding-right: 150px;
 }
+
+#plans-section {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100px 1fr;
+  grid-template-areas:
+    "header-plan"
+    "cards-plan";
+}
+#header-plans-section {
+  grid-area: header-plan;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* -- Card plan -- */
+#cards-plans-section {
+  grid-area: cards-plan;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.card-plan {
+  height: 450px;
+  width: 300px;
+  background-color: aqua;
+  padding: 50px;
+}
+
+.title-card-plan {
+  font-family: var(--font-family);
+
+  font-size: large;
+  color: var(--black-color);
+}
+
+.price-card-plan {
+  font-family: var(--font-family);
+
+  font-size: large;
+  color: var(--black-color);
+}
+
+.price-card-plan > span {
+  font-size: xx-large;
+}
+
+#popular-card-plan {
+    overflow: hidden;
+}
+#popular-banner {
+    height: 30px;
+    width: 200px;
+    background-color: var(--one-color);
+
+    font-family: var(--font-family);
+    color: var(--white-color);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: relative;
+    top: -10px;
+    left: 200px;
+    transform: rotate(45deg);
+}
+
+/* ----- FOOTER  ----- */
 
 footer {
   grid-area: footer;
