--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ main {
   align-items: center;
 }
 
-/* -- Card plan -- */
+/* -- Plan Card -- */
 #cards-plans-section {
   grid-area: cards-plan;
 
@@ -142,26 +142,89 @@ main {
 }
 
 #popular-card-plan {
-    overflow: hidden;
+  overflow: hidden;
 }
 #popular-banner {
-    height: 30px;
-    width: 200px;
-    background-color: var(--one-color);
+  height: 30px;
+  width: 200px;
+  background-color: var(--one-color);
 
-    font-family: var(--font-family);
-    color: var(--white-color);
+  font-family: var(--font-family);
+  color: var(--white-color);
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    position: relative;
-    top: -10px;
-    left: 200px;
-    transform: rotate(45deg);
+  position: relative;
+  top: -10px;
+  left: 200px;
+  transform: rotate(45deg);
 }
 
+/* -- Add-on card -- */
+#addons-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#addons-title-section {
+  color: var(--black-color);
+  font-family: var(--font-family);
+  font-size: x-large;
+}
+#addons-cards-section {
+  width: 85%;
+  background-color: #f5f5f5;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  gap: 50px;
+}
+.addon-card {
+  width: 100%;
+  padding: 20px;
+  background-color: #ffffff;
+
+  display: grid;
+  grid-template-columns: 90% 10%;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    "title price"
+    "description price";
+}
+.addon-card > p {
+  margin: 5;
+  font-family: var(--font-family);
+  color: var(--black-color);
+}
+
+.subtitle-addon-card {
+  grid-area: title;
+  font-size: large;
+
+  display: flex;
+  align-items: flex-end;
+}
+.description-addod-card {
+  grid-area: description;
+  font-size: small;
+
+  display: flex;
+  align-items: flex-start;
+}
+.price-addon-card {
+  grid-area: price;
+
+  font-size: x-large;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* ----- FOOTER  ----- */
 
 footer {
