--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
     "header"
     "main"
     "footer";
+
+  gap: 75px;
 }
 
 /* HEADER */
@@ -179,17 +181,19 @@ main {
   font-size: x-large;
 }
 #addons-cards-section {
-  width: 85%;
-  background-color: #f5f5f5;
+  width: 100%;
+  background-color: #eb0f0f;
+  padding: 20px;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  gap: 50px;
+  gap: 10px;
 }
 .addon-card {
+  display: block;
   width: 100%;
   padding: 20px;
   background-color: #ffffff;
@@ -289,8 +293,105 @@ main {
   font-family: var(--font-family);
   font-weight: 500;
 }
+
+/* -- Question Section -- */
+#question-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#title-question-section {
+  color: var(--one-color);
+  font-family: var(--font-family);
+  font-size: x-large;
+  font-weight: 300;
+}
+
+#container-questions-section {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  gap: 15px;
+}
+
+.question-item {
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.question-item > span {
+  color: var(--black-color);
+  font-family: var(--font-family);
+  font-size: large;
+  font-weight: 300;
+}
+
+.question-item > i {
+  color: #d6d6d6;
+}
+
 /* ----- FOOTER  ----- */
 
 footer {
   grid-area: footer;
+
+  padding-left: 150px;
+  padding-right: 150px;
+
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "col-1 col-2  col-3";
+}
+
+#footer-col-1 {
+  grid-area: col-1;
+}
+#footer-col-2 {
+  grid-area: col-2;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#footer-col-3 {
+  grid-area: col-3;
+}
+
+.title-list-footer {
+  color: var(--black-color);
+  font-family: var(--font-family);
+  font-size: medium;
+  font-weight: 500;
+}
+
+.highlight-title{
+  color: var(--one-color);
+  font-size: small;
+  font-weight: 400;
+}
+
+.list-footer {
+  list-style-type: none;
+  padding: 0;
+}
+
+.list-footer > li > a {
+  color: #b3a9ab;
+  font-family: var(--font-family);
+  font-size: small;
+  text-decoration: none;
+}
+.list-footer > li > i {
+  color: var(--black-color);
 }
